Fix page title from overflowing
Bug: T319052

--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -39,8 +39,7 @@ body {
 	padding: @padding-content;
 
 	.firstHeading {
-		/* Change the default from mediawiki.skinning CSS to let indicators float into heading area */
-		overflow: visible;
+		word-wrap: break-word;
 		margin-bottom: 0;
 	}
 }
